# osmeusdireitos

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/data/: autoridades_mocambique.md
backend/src/: config.py  database.py  jsonl_log.py  main.py  models.py
backend/src/ingestion/: download_constitution.py  embed_and_index.py  parse_constitution.py  run_ingestion.py
backend/src/rag/: pipeline.py  prompt.py  retriever.py
backend/src/routers/: examples.py  feedback.py  health.py  query.py
backend/tests/: test_ingestion.py  test_pipeline.py
frontend/: Dockerfile  next.config.mjs  package.json  tailwind.config.ts
frontend/public/: manifest.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/[...slug]/: route.ts
frontend/src/app/resultado/: page.tsx
frontend/src/app/sobre/: page.tsx
frontend/src/components/: AnalysisPhases.tsx  ArticleCard.tsx  ExampleSituations.tsx  FeedbackWidget.tsx  LanguageSelector.tsx  SituationInput.tsx  VerdictCard.tsx  VoiceButton.tsx
frontend/src/lib/: api.ts  types.ts
frontend/src/styles/: globals.css
